Creating artist playlists now saves playlist ids to database

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,7 @@ html(lang='en')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     header
-      a(href='/login') Sign In
-      a(href='/liked_songs') Liked Songs
+      a(href='/login') Sign In 
+      a(href='/liked_songs') Create Artist Playlists
+      a(href='/update_playlists') Update Playlists
     block content
