--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,50 +1,205 @@
+
+@font-face {
+    font-family: 'Inter';
+    src: url('Inter/static/Inter-Medium.ttf');
+}
+
 *{
     box-sizing: border-box;
+    font-family: 'Inter';
     margin: 0;
     padding: 0;
+}
 
+html{
+    background-color: whitesmoke;
+    scroll-behavior: smooth;
+    max-width: 100%;
 }
 
 body{
-    background-color: gray;
     position: relative;
+    padding: 0%;
+    width: 100%;
+    height: 100%;
 }
 
+#root{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+
+
+/* HEADER */
 header{
     height: 60px;
     position: relative;
-    background-color: black;
     z-index: 1000;
     top: 0;
     width: 100%;
-    color:white;
+    color:black;
     text-align: center;
 }
+
 header h1{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-size: 2em;
 }
 
 #sign-in-btn{
     position: absolute;
-    right: 10px;
+    right: 23%;
     top: 50%;
-    transform: translate(0%, -50%);
+    transform: translateY(-50%);
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    padding: 5px;
+    height: 30px;
+    width: 80px;
+}
+
+#sign-in-btn a{
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
 }
-#test{
-    background-color: green;
+
+#header-line{
+    position: absolute;
+    border: none;
+    height: 1px;
+    background-color: gray;
+    bottom: 0%;
+    width: 100%;
+    
+}
+
+#main-page{
+    padding-left: 23%;
+    padding-right: 23%;
+    position: relative;
 }
 
 #playlist-operations{
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 50px;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 250px;
+}
+
+#create-playlists {
+position: relative;
+ width: 100%;
+ height: 500px;
+}
+
+#create-playlists-title{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    width: 100%;
+    height: 50px;
+    
+}
+
+#create-playlists h2{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    
 }
 
 
+#create-playlists-flex {
+    position: absolute;
+    display: flex;
+    margin-top: 100px;
+    flex-direction: row;
+    width: 100%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    justify-content: center;
+    gap: 25px;
+    justify-content: space-around;
+}
+
+#selected-artist-box{
+    position: relative;
+    width:324px;
+    height: 454px;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    background-color: gray;
+}
+
+#artist {
+    position: relative;
+    display: grid;
+    grid-template-columns:  1fr 3fr;
+    grid-template-rows: 1fr 1fr;
+    width:320px;
+    height: 99px;
+    border-style: solid;
+    border-color: black;
+    border-left: 0px;
+    border-right: 0px;
+    border-width: 2px;
+    padding: 10px;
+    top: 0%;
+}
+
+#artist-pic {
+    position: relative;
+    height: 100%;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    grid-row: 1/3;
+}
+
+#artist-name {
+   text-align: center;
+}
+
+#artist-options {
+    position: relative;
+    text-align: center;
+    width: 100%;
+}
+
+#remove-btn {
+    position: relative;
+    background-color: red;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    align-self: flex-end;
+}
 
 
+#white-line {
+    position: absolute;
+    background-color: white;
+    width: 15px;
+    height: 3.5px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.artist-grid-box {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
