Added ability to remove artists from selected list

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -131,7 +131,7 @@ position: relative;
     justify-content: space-around;
 }
 
-#selected-artist-box{
+#artist-list{
     position: relative;
     width:324px;
     height: 454px;
