--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,49 +1,40 @@
-
+/* GENERAL SETTINGS*/
 @font-face {
     font-family: 'Inter';
     src: url('Inter/static/Inter-Medium.ttf');
 }
 
-*{
+* {
     box-sizing: border-box;
     font-family: 'Inter';
     margin: 0;
     padding: 0;
 }
 
-html{
+html {
     background-color: whitesmoke;
     scroll-behavior: smooth;
     max-width: 100%;
 }
 
-body{
-    position: relative;
-    padding: 0%;
-    width: 100%;
-    height: 100%;
-}
-
-#root{
-    position: relative;
-    width: 100%;
-    height: 100%;
+body {
+    min-height: 100vh;
 }
 
 
 
 /* HEADER */
-header{
+header {
     height: 60px;
     position: relative;
     z-index: 1000;
     top: 0;
     width: 100%;
-    color:black;
+    color: black;
     text-align: center;
 }
 
-header h1{
+header h1 {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -51,7 +42,7 @@ header h1{
     font-size: 2em;
 }
 
-#sign-IO-btn{
+#sign-IO-btn {
     position: absolute;
     right: 23%;
     top: 50%;
@@ -64,31 +55,35 @@ header h1{
     width: 80px;
 }
 
-#sign-in-btn a{
+#sign-in-btn a {
     position: absolute;
-    top:50%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
 }
 
-#header-line{
+#header-line {
     position: absolute;
     border: none;
     height: 1px;
     background-color: gray;
     bottom: 0%;
     width: 100%;
-    
+
 }
 
-#main-page{
+
+
+/*MAIN BODY*/
+#main-page {
     padding-left: 23%;
     padding-right: 23%;
-    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
-#playlist-operations{
+#playlist-operations {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -96,25 +91,23 @@ header h1{
 }
 
 #create-playlists {
-position: relative;
- width: 100%;
- height: 500px;
+    position: relative;
 }
 
-#create-playlists-title{
+#create-playlists-title {
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0%);
     width: 100%;
     height: 50px;
-    
+
 }
 
-#create-playlists h2{
+#create-playlists h2 {
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0%);
-    
+
 }
 
 
@@ -125,15 +118,19 @@ position: relative;
     flex-direction: row;
     width: 100%;
     left: 50%;
-    transform: translate(-50%, 0%);
+    transform: translateX(-50%);
     justify-content: center;
     gap: 25px;
     justify-content: space-around;
 }
 
-#artist-list{
+#artist-list-container {
     position: relative;
-    width:324px;
+}
+
+#artist-list {
+    position: relative;
+    width: 324px;
     height: 454px;
     border-style: solid;
     border-color: black;
@@ -141,9 +138,20 @@ position: relative;
     background-color: gray;
 }
 
-#artist-search-list{
+#create-playlist-btn {
+    position: absolute;
+    width: 300px;
+    height: 50px;
+    border-color: black;
+    background-color: green;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 10px;
+}
+
+#artist-search-list {
     position: relative;
-    width:324px;
+    width: 324px;
     height: 454px;
     border-style: solid;
     border-color: black;
@@ -154,9 +162,9 @@ position: relative;
 #artist {
     position: relative;
     display: grid;
-    grid-template-columns:  1fr 3fr;
+    grid-template-columns: 1fr 3fr;
     grid-template-rows: 1fr 1fr;
-    width:320px;
+    width: 320px;
     height: 99px;
     border-style: solid;
     border-color: black;
@@ -177,7 +185,7 @@ position: relative;
 }
 
 #artist-name {
-   text-align: center;
+    text-align: center;
 }
 
 #artist-options {
@@ -203,7 +211,7 @@ position: relative;
     height: 3.5px;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
 
 .artist-grid-box {
