--- a/client/src/index.css
+++ b/client/src/index.css
@@ -185,14 +185,15 @@ header h1 {
     position: relative;
     width: 100%;
     border-style: solid;
-    border-color: black;
-    border-width: 1px;
+    border-radius: 50%;
     grid-row: 1/3;
+    background-color: black;
 }
 
-#artist-pic img{
+#artist-pic img {
     width: 100%;
     height: 100%;
+    border-radius: 50%;
 }
 
 #artist-name {
