--- a/client/src/index.css
+++ b/client/src/index.css
@@ -129,11 +129,11 @@ header h1 {
 
 
 
-#artist-list-container {
+.queue-container {
     position: relative;
 }
 
-#artist-list {
+.queue-list {
     position: relative;
     width: 324px;
     height: 454px;
@@ -145,7 +145,7 @@ header h1 {
     overflow-x: hidden;
 }
 
-#create-playlist-btn {
+.playlist-btn {
     position: absolute;
     width: 300px;
     height: 50px;
