--- a/client/src/index.css
+++ b/client/src/index.css
@@ -143,17 +143,35 @@ header h1 {
     background-color: gray;
     overflow-y: auto;
     overflow-x: hidden;
+    margin-bottom: 10px;
 }
 
 .playlist-btn {
-    position: absolute;
+    position: relative;
     width: 300px;
     height: 50px;
     border-color: black;
     background-color: green;
     left: 50%;
     transform: translateX(-50%);
-    margin-top: 10px;
+}
+
+
+.loader {
+    position: relative;
+    left: 45%;
+    
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 3px solid black;
+    border-top: 3px solid white;
+    animation: load 2s ease-in-out infinite;
+}
+  
+@keyframes load{
+    0% {transform: rotate(0deg)}
+    100% {transform: rotate(360deg)}
 }
 
 .search-list {
