--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,9 +12,10 @@
 }
 
 html {
-    background-color: #588157;
+    background-color: white;
     scroll-behavior: smooth;
     max-width: 100%;
+    color: black;
 }
 
 body {
@@ -34,16 +35,21 @@ header {
     z-index: 1000;
     top: 0;
     width: 100%;
-    color: black;
     text-align: center;
 }
 
 header h1 {
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 5%;
+    transform: translateY(-50%);
     font-size: 2em;
+}
+
+
+#home-link {
+    text-decoration: none;
+    color: black;
 }
 
 #sign-IO-btn {
@@ -51,33 +57,26 @@ header h1 {
     right: 23%;
     top: 50%;
     transform: translateY(-50%);
-    border-style: solid;
     border-width: 1px;
     border-radius: 10px;
     padding: 5px;
     height: 30px;
     width: 80px;
+    border-color: black;
+    border-style: solid;
+    color: black;
 }
 
-#sign-in-btn a {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 
-}
 
 #header-line {
     position: absolute;
     border: none;
     height: 1px;
-    background-color: gray;
     bottom: 0%;
     width: 100%;
 
 }
-
-
 
 /*MAIN BODY*/
 #main-page {
@@ -94,7 +93,6 @@ header h1 {
 #main-nav {
     position: relative;
     text-align: center;
-    background-color: #dad7cd50;
     height: 50px;
     font-size: 1.5em;
     border-radius: 50px;
@@ -120,15 +118,27 @@ header h1 {
     list-style-type: none;
 }
 
-#main-val li {
+#main-nav li {
     position: relative;
-    width: 15%;
-    display: inline;
+    border-radius: 40px;
+    
+}
+
+#main-nav li.active {
+    border-style: solid;
+    border-width: 2px;
+}
+
+#main-nav li:hover {
+    background-color: lightgray;
 }
 
 #main-nav a {
+    position: relative;
     color: black;
     text-decoration: none;
+    height: 100%;
+    padding: 10px;
 }
 
 .playlist-si {
@@ -137,14 +147,12 @@ header h1 {
     left: 50%;
     transform: translateX(-50%);
     padding: 50px;
-    border-color: black;
+    border-color: rgba(219, 214, 214, 0.76);
     border-style: solid;
     border-width: 2px;
     text-align: center;
     border-radius: 50px;
     font-size: 2em;
-    color: lightgreen;
-    background-color: black;
 }
 
 .playlist-info {
@@ -172,7 +180,6 @@ header h1 {
 /*Playlist Creator*/
 .playlist-operations {
     position: relative;
-
 }
 
 .operations-title {
@@ -212,11 +219,11 @@ header h1 {
     position: relative;
     width: 324px;
     height: 454px;
-    background-color: #dad7cd50;
     overflow-y: auto;
     overflow-x: hidden;
     margin-bottom: 10px;
     border-radius: 10px;
+    border-style: solid;
 }
 
 .playlist-btn {
@@ -224,10 +231,9 @@ header h1 {
     width: 300px;
     height: 50px;
     border-color: black;
-    background-color: #A3B18A;
     left: 50%;
     transform: translateX(-50%);
-    border-style: none;
+    border-style: solid;
     border-radius: 50px;
 }
 
@@ -235,7 +241,6 @@ header h1 {
 .loader {
     position: relative;
     left: 45%;
-
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -244,9 +249,21 @@ header h1 {
     animation: load 2s ease-in-out infinite;
 }
 
+.list-loader {
+    position: relative;
+    left: 45%;
+    top: 45%;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 4px solid black;
+    border-top: 4px solid white;
+    animation: load 2s linear infinite;
+}
+
 @keyframes load {
     0% {
-        transform: rotate(0deg)
+        transform: rotate(0deg) 
     }
 
     100% {
@@ -260,11 +277,13 @@ header h1 {
     width: 324px;
     height: 454px;
     border-color: black;
-    border-width: 1px;
-    background-color: #dad7cd50;
+    border-width: 3px;
+    background-color: white;
     overflow-y: auto;
     overflow-x: hidden;
     border-radius: 10px;
+    border-style: solid;
+
 }
 
 .searchbar-container {
@@ -292,7 +311,7 @@ header h1 {
     width: 85%;
     font-size: 1em;
     border: none;
-    background-color: #A3B18A;
+    background-color: white;
 }
 
 
