--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,10 +12,12 @@
 }
 
 html {
-    background-color: white;
+    background-color: rgb(28, 29, 28);
     scroll-behavior: smooth;
     max-width: 100%;
-    color: black;
+    color: white;
+    min-height: 100vh;
+    height: 100%;
 }
 
 body {
@@ -27,14 +29,23 @@ label {
     text-align: center;
 }
 
+#root{
+    height: 100vh;
+    max-height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows:   auto 1fr;
+    grid-template-areas:
+    'header'
+    'body';
+}
+
 
 /* HEADER */
 header {
-    height: 60px;
+    grid-area: header;
     position: relative;
-    z-index: 1000;
-    top: 0;
-    width: 100%;
+    height: 60px;
     text-align: center;
 }
 
@@ -44,12 +55,12 @@ header h1 {
     left: 5%;
     transform: translateY(-50%);
     font-size: 2em;
+    color: white;
 }
 
 
 #home-link {
     text-decoration: none;
-    color: black;
 }
 
 #sign-IO-btn {
@@ -64,7 +75,7 @@ header h1 {
     width: 80px;
     border-color: black;
     border-style: solid;
-    color: black;
+    color:white;
 }
 
 
@@ -80,12 +91,21 @@ header h1 {
 
 /*MAIN BODY*/
 #main-page {
-    padding-left: 23%;
-    padding-right: 23%;
+    position: relative;
+    max-height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr;
+   /* position: relative;*/
+    grid-area: body;
+    padding-left: 15%;
+    padding-right: 15%;
+   /* position: absolute;
+
     width: 100%;
     height: 100%;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 10px;*/
 }
 
 
@@ -135,7 +155,6 @@ header h1 {
 
 #main-nav a {
     position: relative;
-    color: black;
     text-decoration: none;
     height: 100%;
     padding: 10px;
@@ -169,17 +188,19 @@ header h1 {
 
 }
 
-#playlist-operations-flex {
+/*#playlist-operations-container {
     margin-top: 10px;
     gap: 250px;
     padding: 10px;
 
     border-radius: 50px;
-}
+}*/
 
 /*Playlist Creator*/
 .playlist-operations {
     position: relative;
+    margin-top: 25px;
+    margin-bottom: 100px;
 }
 
 .operations-title {
@@ -199,42 +220,74 @@ header h1 {
 }
 
 .operations-flex {
-    position: relative;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
-    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    gap: 25px;
+    /*position: absolute;
+    display: flex;
+    flex-direction: row;
+    max-width: 100%;
+    max-height:100%;
+    min-width: 100%;
+    min-height: 100%;
     left: 50%;
     transform: translateX(-50%);
     justify-content: center;
+    align-items: center;
     gap: 25px;
-    justify-content: space-around;
+    justify-content: space-around;*/
 }
 
 
 .queue-container {
     position: relative;
+    height: 100%;
+    max-height: 100%;
+    width: 50%;
+    flex-grow: 1;
+    /*display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows:   9fr 1fr;
+    place-items: center;*/
 }
 
-.queue-list {
-    position: relative;
-    width: 324px;
-    height: 454px;
+
+.result-list {
+    list-style-type: none;
+    margin: auto;
+    padding: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 0px;
+    position: absolute;
+    width: 65%;
+    height: 85%;
+    max-height: 85%;
     overflow-y: auto;
-    overflow-x: hidden;
-    margin-bottom: 10px;
     border-radius: 10px;
     border-style: solid;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    background-color: whitesmoke;
+    color: black;
 }
 
 .playlist-btn {
-    position: relative;
-    width: 300px;
-    height: 50px;
-    border-color: black;
+    position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    width: 50%;
+    height: 8%;
+    border-color: black;
     border-style: solid;
     border-radius: 50px;
+    margin-top: 20px;
+    bottom: 20px;
 }
 
 
@@ -271,34 +324,27 @@ header h1 {
     }
 }
 
-.search-list {
-    display: block;
-    position: relative;
-    width: 324px;
-    height: 454px;
-    border-color: black;
-    border-width: 3px;
-    background-color: white;
-    overflow-y: auto;
-    overflow-x: hidden;
-    border-radius: 10px;
-    border-style: solid;
 
-}
 
 .searchbar-container {
     position: relative;
     border-style: solid;
-    width: 100%;
+    width: 350px;
     height: 35px;
     border-radius: 50px;
     border-width: 1px;
 }
 
 .selector {
+    position: absolute;
     display: flex;
     flex-direction: column;
-
+    height: 50px;
+    width: 300px;
+    margin: auto;
+    bottom: 0px;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .selector input {
@@ -349,42 +395,25 @@ header h1 {
 /*Search & Selection cards*/
 .card {
     position: relative;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: 1fr 1fr;
-    width: 320px;
-    height: 99px;
-    border-style: solid;
-    border-color: black;
-    border-left: 0px;
-    border-right: 0px;
-    border-width: 2px;
-    padding: 10px;
-    top: 0%;
-    padding-right: 20px;
-}
-
-.card-grid-box {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 }
 
 .card-pic {
     position: relative;
-    width: 100%;
-    border-style: solid;
-    border-radius: 50%;
-    grid-row: 1/3;
-    background-color: black;
+    content: "";
+    padding-top: 100%;
+    display: block;
+    overflow: hidden;
+    border-radius: 10%;
+
 }
 
 .card-pic img {
+    position: absolute;
     width: 100%;
-    height: 100%;
-    border-radius: 50%;
+    top: 0;
+    left: 0;
+    margin: auto;
+    bottom: 0;
 }
 
 .card-name {
@@ -398,21 +427,23 @@ header h1 {
 }
 
 #remove-btn {
-    position: relative;
-    background-color: red;
+    position: absolute;
     width: 25px;
     height: 25px;
-    border-radius: 50%;
-    align-self: flex-end;
+    top: 2%;
+    right: 2%;
+    border: none;
+    background-color: transparent;
+}
+
+#remove-btn::after {
+    content: "\d7"; 
+    color: gray;
+    font-size: 30px;
+}
+
+#remove-btn:hover:after {
+    color: red;
 }
 
 
-#white-line {
-    position: absolute;
-    background-color: white;
-    width: 15px;
-    height: 3.5px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
