--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,11 +33,11 @@ label {
     height: 100vh;
     max-height: 100%;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 4fr;
     grid-template-rows:   auto 1fr;
     grid-template-areas:
-    'header'
-    'body';
+    "header header"
+    "sidebar body";
 }
 
 
@@ -89,59 +89,44 @@ header h1 {
 
 }
 
+
+/* SIDEBAR */
+#sidebar {
+    grid-area: sidebar;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+
 /*MAIN BODY*/
 #main-page {
-    position: relative;
-    max-height: 100%;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr;
-   /* position: relative;*/
-    grid-area: body;
     padding-left: 15%;
     padding-right: 15%;
-   /* position: absolute;
-
-    width: 100%;
-    height: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;*/
 }
 
 
 /*NAVIGATION*/
-#main-nav {
-    position: relative;
-    text-align: center;
-    height: 50px;
-    font-size: 1.5em;
-    border-radius: 50px;
-    width: 60%;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-#main-nav nav {
-    width: 100%;
+#main-nav{
     height: 100%;
+    width: 100%;
+    border-style: solid;
 }
 
 #main-nav ul {
-    width: 100%;
     height: 100%;
-    position: relative;
+    width: 100%;
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    gap: 50px;
+    flex-direction: column;
+    justify-content: flex-start;
     list-style-type: none;
 }
 
 #main-nav li {
     position: relative;
-    border-radius: 40px;
-    
+    height: 10%;
+    max-height: 250px;
+    border-style: solid;
 }
 
 #main-nav li.active {
@@ -154,9 +139,10 @@ header h1 {
 }
 
 #main-nav a {
-    position: relative;
+    position: absolute;
     text-decoration: none;
     height: 100%;
+    width: 100%;
     padding: 10px;
 }
 
@@ -188,58 +174,15 @@ header h1 {
 
 }
 
-/*#playlist-operations-container {
-    margin-top: 10px;
-    gap: 250px;
-    padding: 10px;
-
-    border-radius: 50px;
-}*/
-
 /*Playlist Creator*/
 .playlist-operations {
-    position: relative;
-    margin-top: 25px;
-    margin-bottom: 100px;
-}
-
-.operations-title {
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    width: 100%;
-    height: 50px;
-
-}
-
-.operations-title h2 {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, 0%);
-
-}
-
-.operations-flex {
-    width: 100%;
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     gap: 25px;
-    /*position: absolute;
-    display: flex;
-    flex-direction: row;
-    max-width: 100%;
-    max-height:100%;
-    min-width: 100%;
-    min-height: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    justify-content: center;
-    align-items: center;
-    gap: 25px;
-    justify-content: space-around;*/
 }
 
 
@@ -249,10 +192,6 @@ header h1 {
     max-height: 100%;
     width: 50%;
     flex-grow: 1;
-    /*display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows:   9fr 1fr;
-    place-items: center;*/
 }
 
 
