--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,10 +12,10 @@
 }
 
 html {
-    background-color: rgb(28, 29, 28);
+    background-color:white;
     scroll-behavior: smooth;
     max-width: 100%;
-    color: white;
+    color: black;
     min-height: 100vh;
     height: 100%;
 }
@@ -55,7 +55,7 @@ header h1 {
     left: 5%;
     transform: translateY(-50%);
     font-size: 2em;
-    color: white;
+    color: black;
 }
 
 
@@ -75,7 +75,7 @@ header h1 {
     width: 80px;
     border-color: black;
     border-style: solid;
-    color:white;
+    color:black;
 }
 
 
@@ -212,7 +212,6 @@ header h1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
-    background-color: whitesmoke;
     color: black;
 }
 
@@ -296,7 +295,6 @@ header h1 {
     width: 85%;
     font-size: 1em;
     border: none;
-    background-color: white;
 }
 
 
