--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,7 @@
 }
 
 html {
-    background-color:white;
+    background-color: white;
     scroll-behavior: smooth;
     max-width: 100%;
     color: black;
@@ -22,6 +22,8 @@ html {
 
 body {
     min-height: 100vh;
+    height: 100vh;
+    width: 100%;
 }
 
 label {
@@ -29,15 +31,17 @@ label {
     text-align: center;
 }
 
-#root{
-    height: 100vh;
+#root {
+    position: absolute;
+    height: 100%;
+    width: 100%;
     max-height: 100%;
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows:   auto 1fr;
+    grid-template-rows: auto 1fr;
     grid-template-areas:
-    "header header"
-    "sidebar body";
+        "header header"
+        "sidebar body";
 }
 
 
@@ -47,15 +51,16 @@ header {
     position: relative;
     height: 60px;
     text-align: center;
+    background: hsl(0 0% 5%);
+    color: white;
 }
 
 header h1 {
     position: absolute;
-    top: 50%;
-    left: 5%;
-    transform: translateY(-50%);
+    left: 50%;
+    transform: translateX(-50%);
     font-size: 2em;
-    color: black;
+    color: white;
 }
 
 
@@ -65,7 +70,7 @@ header h1 {
 
 #sign-IO-btn {
     position: absolute;
-    right: 23%;
+    right: 10%;
     top: 50%;
     transform: translateY(-50%);
     border-width: 1px;
@@ -73,9 +78,8 @@ header h1 {
     padding: 5px;
     height: 30px;
     width: 80px;
-    border-color: black;
-    border-style: solid;
-    color:black;
+    color: white;
+    background: hsl(0 0% 25%);
 }
 
 
@@ -93,29 +97,21 @@ header h1 {
 /* SIDEBAR */
 #sidebar {
     grid-area: sidebar;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-}
-
-
-/*MAIN BODY*/
-#main-page {
     position: relative;
-    padding-left: 10%;
-    padding-right: 10%;
-    max-height: 100%;
+    background: hsl(0 0% 25%);
 }
+
 
 
 /*NAVIGATION*/
-#main-nav{
-    height: 100%;
+#main-nav {
+    position: absolute;
     width: 100%;
-    border-style: solid;
+    height: 100%;
 }
 
 #main-nav ul {
+    position: absolute;
     height: 100%;
     width: 100%;
     display: flex;
@@ -128,10 +124,9 @@ header h1 {
     position: relative;
     height: 10%;
     max-height: 250px;
-    border-style: solid;
 }
 
-#main-nav li.active {
+#main-nav li:active {
     border-style: solid;
     border-width: 2px;
 }
@@ -147,6 +142,20 @@ header h1 {
     width: 100%;
     padding: 10px;
 }
+
+
+/*MAIN BODY*/
+#main-page {
+    grid-area: body;
+    position: relative;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 1%;
+    background: hsl(0 0% 90%);
+    padding-bottom: 5%;
+}
+
+
 
 .playlist-si {
     position: relative;
@@ -179,28 +188,36 @@ header h1 {
 /*Playlist Creator*/
 .playlist-operations {
     position: relative;
-    height: 100%;
-    max-height: 100%;
     width: 100%;
+    height: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 9fr; 
+    grid-template-columns: 2fr 1fr 3fr;
+    grid-template-rows: 1fr 9fr;
     grid-template-areas:
-    "selector playlist-btn"
-    "selection queue";
-    padding: 20px;
+        "selector playlist-btn queue"
+        "selection selection queue";
+    place-items: center;
 }
 
 .queue-container {
     position: relative;
     height: 100%;
-    max-height: 100%;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    background: hsl(0 0% 65%);
+    border-radius: 2.5%;
 }
 
 #queue {
     grid-area: queue;
 }
 
+#queue h2 {
+    height: 10%;
+    text-align: center;
+    vertical-align: middle;
+}
 #selection {
     grid-area: selection;
 }
@@ -208,59 +225,35 @@ header h1 {
 
 .result-list {
     position: absolute;
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
     list-style-type: none;
     overflow-y: auto;
-    border-radius: 10px;
-    border-style: solid;
+    border-radius: 2.5%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
     color: black;
-    width: 90%;
-    height: 100%;
-    max-height: 100%;
-    /*list-style-type: none;
-    margin: auto;
-    padding: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    top: 15%;
-    position: absolute;
-    width: 90%;
-    height: 75%;
-    max-height: 85%;
-    overflow-y: auto;
-    border-radius: 10px;
-    border-style: solid;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
-    color: black;*/
 }
 
 .playlist-btn {
-    grid-area: playlist-btn;
-    border-color: black;
-    border-style: solid;
-    border-radius: 50px;
-}
-
-
-.loader {
     position: relative;
-    left: 45%;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    border: 3px solid black;
-    border-top: 3px solid white;
-    animation: load 2s ease-in-out infinite;
+    grid-area: playlist-btn;
+    border-radius: 50px;
+    font-size: 16px;
+    font-weight: bold;
+    background: hsl(0 0% 25%);
+    height: 40%;
+    width: 80%;
 }
 
 .list-loader {
-    position: relative;
-    left: 45%;
-    top: 45%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 50%;
+    transform: translateY(-50%);
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -271,7 +264,7 @@ header h1 {
 
 @keyframes load {
     0% {
-        transform: rotate(0deg) 
+        transform: rotate(0deg)
     }
 
     100% {
@@ -281,32 +274,36 @@ header h1 {
 
 
 
+.selector {
+    grid-area: selector;
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    justify-items: center;
+}
+
 .searchbar-container {
     position: relative;
     border-style: solid;
-    width: 350px;
-    height: 35px;
+    height: 50%;
     border-radius: 50px;
     border-width: 1px;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    background: hsl(0 0% 50%);
 }
 
-.selector {
-    grid-area: selector;
-    display: flex;
-    flex-direction: column;
-    height: 50px;
-    width: 300px;
-    margin: auto;
-}
 
-.selector input {
+.searchbar {
     position: relative;
     border-radius: 50px;
     height: 90%;
     top: 50%;
     transform: translateY(-50%);
-    left: 15%;
-    width: 85%;
+    width: 100%;
     font-size: 1em;
     border: none;
 }
@@ -314,10 +311,6 @@ header h1 {
 
 .magnifying-glass {
     position: relative;
-    width: 35px;
-    height: 50px;
-    left: 5%;
-    top: -95%;
     rotate: -45deg;
 }
 
@@ -388,7 +381,7 @@ header h1 {
 }
 
 #remove-btn::after {
-    content: "\d7"; 
+    content: "\d7";
     color: gray;
     font-size: 30px;
 }
@@ -396,5 +389,3 @@ header h1 {
 #remove-btn:hover:after {
     color: red;
 }
-
-
