--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,7 @@
 /* GENERAL SETTINGS*/
 @font-face {
     font-family: 'Inter';
-    src: url('Inter/static/Inter-Medium.ttf');
+    src: url('Inter/static/Inter-Light.ttf');
 }
 
 * {
@@ -52,7 +52,7 @@ header {
     height: 60px;
     text-align: center;
     background: hsl(0 0% 98%);
-   /* border-bottom: 1px;
+    /* border-bottom: 1px;
     border-style: hidden hidden solid hidden;
     border-color: hsl(0,0%,20%);*/
     box-shadow: 0px 0px 5px hsl(0, 0%, 10%);
@@ -78,12 +78,12 @@ header h1 {
     top: 50%;
     transform: translateY(-50%);
     border-width: 1px;
-    border-radius: 10px;
+    border-radius: 5%;
     padding: 5px;
     height: 30px;
     width: 80px;
     color: white;
-    background: hsl(0 0% 25%);
+    background: hsl(0 0% 10%);
 }
 
 
@@ -103,7 +103,7 @@ header h1 {
     grid-area: sidebar;
     position: relative;
     background: hsl(0 0% 90%);
-    box-shadow: 0px 0px 5px hsl(0, 0%, 10%);
+    /*box-shadow: 0px 0px 5px hsl(0, 0%, 10%);*/
     z-index: 1;
 }
 
@@ -111,9 +111,11 @@ header h1 {
 
 /*NAVIGATION*/
 #main-nav {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    position: relative;
+    margin: 10%;
+    width: 80%;
+    height: 80%;
+    background: hsl(0 0% 84%);
 }
 
 #main-nav ul {
@@ -128,8 +130,9 @@ header h1 {
 
 #main-nav li {
     position: relative;
-    height: 10%;
+    height: 20%;
     max-height: 250px;
+    border-bottom: solid 1px black;
 }
 
 #main-nav li:active {
@@ -146,7 +149,12 @@ header h1 {
     text-decoration: none;
     height: 100%;
     width: 100%;
-    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-size: larger;
+    color: hsl(0 0% 0%);
 }
 
 
@@ -194,15 +202,9 @@ header h1 {
     width: 100%;
     height: 100%;
     display: grid;
-    /*grid-template-columns: 2fr 1fr 3fr;
-    grid-template-rows: 1fr 4.5fr 4.5fr;
-    grid-template-areas:
-        "selector selector playlist-btn"
-        "selection selection selection"
-        "queue queue queue";*/
     grid-template-rows: .5fr 4fr .5fr 4fr;
     grid-template-columns: 1fr 1fr;
-    grid-template-areas: 
+    grid-template-areas:
         "selector result-info"
         "selection selection"
         "playlist-btn queue-info"
@@ -234,13 +236,15 @@ header h1 {
     list-style-type: none;
     display: flex;
     flex-direction: row;
+    align-content: center;
     color: black;
 }
 
-.arrow{
+.arrow {
     position: absolute;
-    height: 100%;
-    width: 8%;
+    top: 10%;
+    height: 60%;
+    width: 6%;
     background-color: hsla(0, 0%, 84%, .3);
     z-index: 1;
     border: none;
@@ -254,8 +258,30 @@ header h1 {
     left: 0;
 }
 
+.arrow::before {
+    position: relative;
+    content: "";
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border: 7px solid black;
+    border-left: hidden;
+    border-bottom: hidden;
+}
+
+#left-arrow::before {
+    transform: rotate(-135deg);
+    margin-left: 40%;
+}
+
+
 #right-arrow {
     right: 0;
+}
+
+#right-arrow::before {
+    transform: rotate(45deg);
+    margin-right: 50%;
 }
 
 .playlist-btn {
@@ -264,11 +290,13 @@ header h1 {
     border-radius: 5%;
     font-size: 16px;
     font-weight: bold;
-    background: hsl(0 0% 98%);
-    color: hsl(0 0% 10%);
+    background: hsl(0 0% 10%);
+    color: hsl(0 0% 98%);
     height: 90%;
-    width: 40%;
-    right: -20%;
+    width: 20%;
+    left: 5%;
+    border-style: none;
+    font-weight: 100;
 }
 
 .list-loader {
@@ -306,37 +334,40 @@ header h1 {
     height: 100%;
     width: 60%;
     align-items: center;
-    justify-items: center;
-    
 }
 
 .searchbar-container {
     position: relative;
-    border-style: solid;
-    height: 50%;
+    border-style: none;
+    height: 80%;
+    width: 50%;
     border-radius: 50px;
     border-width: 1px;
     display: grid;
     grid-template-columns: 1fr 4fr;
-    background: hsl(0 0% 50%);
+    background: hsl(0 0% 80%);
 }
 
 
 .searchbar {
     position: relative;
     border-radius: 50px;
-    height: 90%;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 100%;
     font-size: 1em;
-    border: none;
+    border-style: none;
+    background: transparent;
+    left: 0;
+    width: 100%;
 }
 
+.searchbar:focus {
+    outline: none;
+}
 
 .magnifying-glass {
     position: relative;
     rotate: -45deg;
+    left: 10%;
+    top: 10%;
 }
 
 .mg-circle {
@@ -345,7 +376,7 @@ header h1 {
     height: 20px;
     border-radius: 50%;
     border-color: black;
-    border-width: 3px;
+    border-width: 1px;
     border-style: solid;
     left: 50%;
     transform: translateX(-50%);
@@ -353,7 +384,7 @@ header h1 {
 
 .mg-handle {
     position: relative;
-    width: 3px;
+    width: 2px;
     height: 12px;
     background-color: black;
     left: 50%;
@@ -365,14 +396,17 @@ header h1 {
     grid-area: result-info;
     position: absolute;
     right: 10%;
-    top: 0;
+    color: blue;
+    font-size: large;
+
 }
 
 #queue-info {
     grid-area: queue-info;
     position: absolute;
     right: 10%;
-    z-index: 2;
+    color: blue;
+    font-size: large;
 }
 
 /*Search & Selection cards*/
@@ -382,22 +416,14 @@ header h1 {
     padding: .5rem;
 }
 
-/*.card-pic {
-    position: relative;
-    content: "";
-    padding-top: 100%;
-    display: block;
-    overflow: hidden;
-    border-radius: 10%;
-
-}*/
-
-.card img, .img-filler {
+.card img,
+.img-filler {
     position: relative;
     max-width: 100%;
     max-height: 100%;
     aspect-ratio: 1 / 1;
     width: auto;
+    border-radius: 1%;
 }
 
 
